# handeye-calibration

./: .gitignore  CMakeLists.txt  README.md  calibrate_eih.cpp  calibrate_eih.h  main.cpp
calib_dataset/: T_B_hT.txt  base2flange_rpy.txt
